# py_atmosphere

./: CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/py_atmosphere/: index.doctree
docs/_build/doctrees/autoapi/py_atmosphere/mach_number/: index.doctree
docs/_build/doctrees/autoapi/py_atmosphere/py_atmosphere/: index.doctree
docs/_build/doctrees/autoapi/py_atmosphere/temp_conversion/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/py_atmosphere/: mach_number.html  py_atmosphere.html  temp_conversion.html
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/py_atmosphere/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/py_atmosphere/: index.html
docs/_build/html/autoapi/py_atmosphere/mach_number/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/py_atmosphere/: mach_number.py  py_atmosphere.py  temp_conversion.py
src/py_atmosphere_ubc/: __init__.py  mach_number.py
tests/: test_mach_number.py  test_py_atmosphere.py  test_temp_conversion.py
(+5 files in other folders)
